--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0074de;
   text-decoration: none;
 }
 
@@ -24,12 +24,7 @@ h1,
 h2,
 p,
 ul {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
+  margin: 1rem;
 }
 
 button {
